# shg_frog

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  scripts.spec  shg_frog.spec
.github/workflows/: build.yml  release-build.yml
hooks/: hook-imageio.py
shg_frog/data/: params.default
shg_frog/hardware_comms/: connect_devices.py  device_interfaces.py  kinesis.py  ocean.py  stellarnet.py  utilities.py
shg_frog/helpers/: file_handler.py
shg_frog/model/: acquisition.py  frog.py  phase_retrieval.py
shg_frog/view/: general_worker.py  main_window.py  retrieval_window.py
shg_frog/view/GUI/: main_window.ui
src/shg_frog/: dist_scripts.py  scripts.py
src/shg_frog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/shg_frog/helpers/: file_handler.py
src/shg_frog/model/: connect_devices.py  frog.py  phase_retrieval.py
src/shg_frog/view/: general_worker.py  main_window.py  retrieval_window.py
src/shg_frog/view/GUI/: main_window.ui
