[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "shg_frog"
dynamic=["version"]
authors = [
  { name="Mike Wahl", email="mike.wahl@colorado.edu" },
]
description = "GUI for measuring and reconstructing FROG traces with custom components"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Windows",
    "Private :: Do Not Upload"
]

dependencies = [
  "pyqt5",
  "pyqtgraph",
  "pyyaml",
  "imageio",
  "docopt",
  "matplotlib",
  "hardware_comms @ git+https://${GH_TOKEN}@github.com/UCBoulder/hardware_comms.git",
  ]

[project.scripts]
shg_frog = "shg_frog:scripts.main"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"